fix overflow

--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@ body{
     font-family: 'Roboto Mono',monospace;
     font-size: 16px;
     background-color: #d7e0e9;
+    overflow-x: hidden;
 
 }
 
